--- a/index.html
+++ b/index.html
@@ -9,50 +9,50 @@
     <link rel="stylesheet" href="assets//css/slick.css">
     <link rel="stylesheet" href="assets/css/slick-theme.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css.maps">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
 <body>
+
     <section class="hero-section" style="background-image: url('assets/img/kal-visuals-7mteBDBebgY-unsplash\ 1.svg');">
         <header class="header-top">
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <div class="header-bottom">
-                            <nav class="navbar navbar-expand-lg" aria-label="Eighth navbar example">
-                                <div class="container">
-                                    <a class="navbar-brand" href="#"><img
-                                            src="assets/img/4136591-removebg-preview 1.svg" alt="logo"></a>
-                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#navbarsExample07" aria-controls="navbarsExample07"
-                                        aria-expanded="false" aria-label="Toggle navigation">
-                                        <span class="navbar-toggler-icon"></span>
-                                    </button>
 
-                                    <div class="nav-container" id="navbarsExample07">
-                                        <ul class="navbar-nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link" aria-current="page" href="#">Home</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#">Blogs</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#">Service</a>
-                                            </li>
+                            <nav class="navbar navbar-expand-lg" aria-label="Fifth navbar example">
+                                <a class="navbar-brand" href="#"><img src="assets/img/4136591-removebg-preview 1.svg" alt="logo"></a>
 
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#">Events</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="#">About</a>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </button>
+
+                                <div class="collapse navbar-collapse justify-content-end" id="navbarsExample05">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item">
+                                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Blogs</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Service</a>
+                                        </li>
+
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Events</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">About</a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </nav>
+
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
         <section class="hero">
             <div class="container">
                 <div class="row">
-                    <div class="col-7">
+                    <div class="col-lg-7">
                         <div class="text">
                             <h2 class="sub-title">Explore The World</h2>
                             <h1 class="title">A Wonderful The World</h1>
@@ -72,7 +72,7 @@
                             <button type="button" class="btn btn-danger">Learn More</button>
                         </div>
                     </div>
-                    <div class="col-5 col-md-sm-5">
+                    <div class="col-md-5 d-none d-lg-block">
                         <img src="assets/img/—Pngtree—airplane travel tourism supplies_6374202 1.svg" alt="">
                     </div>
                 </div>
@@ -97,8 +97,8 @@
 
 
             </div>
-            <div class="row">
-                <div class="col-4 col-md-sm-12">
+            <div class="row gy-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
                         <img src="assets/img/annie-spratt-aYo-Xkv9x88-unsplash.jpg" alt="image">
                         <div class="card-body">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-md-sm-12">
+                <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
                         <img src="assets/img/mike-enerio-4HVCsDOg0qI-unsplash.jpg" alt="image">
                         <div class="card-body">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-md-sm-12">
+                <div class="col-md-6 col-lg-4">
                     <div class="card shadow-sm">
                         <img src="assets/img/charles-postiaux-Q6UehpkBSnQ-unsplash.jpg" alt="image">
                         <div class="card-body">
@@ -154,8 +154,8 @@
 
                 </div>
             </div>
-            <div class="row">
-                <div class="col-3">
+            <div class="row gy-4">
+                <div class="col-6 col-lg-3">
                     <figure class="img">
                         <img src="assets/img/kelly-sikkema-0SYAZsa1Hgo-unsplash.jpg" alt="">
                     </figure>
@@ -164,7 +164,7 @@
                     <p class="zip-paragraph">Some representative carousel. This is the first column.</p>
                     <button type="button" class="btn btn-sm btn-outline-secondary">View Detail</button>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-lg-3">
                     <figure class="img">
                         <img src="assets/img/kelly-sikkema-0SYAZsa1Hgo-unsplash.jpg" alt="">
                     </figure>
@@ -173,7 +173,7 @@
                     <p class="zip-paragraph">Some representative carousel. This is the first column.</p>
                     <button type="button" class="btn btn-sm btn-outline-secondary">View Detail</button>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-lg-3">
                     <figure class="img">
                         <img src="assets/img/kelly-sikkema-0SYAZsa1Hgo-unsplash.jpg" alt="">
                     </figure>
@@ -182,7 +182,7 @@
                     <p class="zip-paragraph">Some representative carousel. This is the first column.</p>
                     <button type="button" class="btn btn-sm btn-outline-secondary">View Detail</button>
                 </div>
-                <div class="col-3">
+                <div class="col-6 col-lg-3">
                     <figure class="img">
                         <img src="assets/img/kelly-sikkema-0SYAZsa1Hgo-unsplash.jpg" alt="">
                     </figure>
@@ -200,8 +200,13 @@
 
     <section class="making-tour">
         <div class="container">
-            <div class="row">
-                <div class="col-7">
+            <div class="row gy-4">
+                <div class="col-8 col-lg-5 order-lg-last">
+                    <figure class="enjoy-image">
+                        <img src="assets/img/rafting-1259609_1920-removebg-preview - Copy.png" alt="">
+                    </figure>
+                </div>
+                <div class="col-lg-7">
                     <div class="tour">
                         <h4 class="tour-title">Making Adventure Tours,Activities </h4>
                         <h4 class="tour-title">affordable</h4>
@@ -209,16 +214,12 @@
                         <p class="tour-paragraph">There are many variations of passages of Lorem Ipsum available, but
                             the majority have suffered alteration in some form,
                             by injected humour,randomised words which don't look even slightly believable.</p>
-                            <div class="group-btn">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View More</button>
-                            </div>
+                        <div class="group-btn">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View More</button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-5">
-                    <figure class="enjoy-image">
-                        <img src="assets/img/rafting-1259609_1920-removebg-preview - Copy.png" alt="">
-                    </figure>
-                </div>
+
             </div>
         </div>
     </section>
@@ -235,7 +236,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="adventurepic d-flex mt-4">
                         <figure class="hiking-pic">
                             <img src="assets/img/hiking.png" alt="hiking">
@@ -268,7 +269,7 @@
                     </div>
 
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="adventurepic d-flex mt-4">
                         <figure class="hiking-pic">
                             <img src="assets/img/package.png" alt="hiking">
@@ -317,14 +318,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="row">
-                        <div class="col-6">
+                    <div class="row gy-4">
+                        <div class="col-md-6">
 
                             <p class="footprint-paragraph">It is a long established fact that a reader will be
                                 distracted
                                 by the readable content of a page when looking at its layout. </p>
                         </div>
-                        <div class="col-6">
+                        <div class="col-md-6">
                             <div class="row">
                                 <div class="col-4 ">
                                     <div class="rounded-circle text-center">
@@ -487,7 +488,7 @@
         </div>
     </section>
     <!-- end of partner-section  -->
-    
+
     <section class="footer">
         <div class="container">
             <div class="footer-text">
